Do not include API version as plaintext into generated code.